# uino

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  uino_再設計計画書.md
docs/: findings.md  research-cortex.md
examples/: mnist.rs
src/: bridge.rs  lib.rs  ribbon_synapse.rs  spike_generator.rs
src/cortex/: a1_core.rs  belt.rs  mod.rs  model.rs  oscillator.rs  reward.rs  strf.rs  thalamus.rs
src/metrics/: manifold.rs  mod.rs  spike_counter.rs
src/microcircuit/: adex.rs  apparent_motion.rs  canonical.rs  mod.rs  plasticity.rs  stages.rs  synapse.rs
src/retina/: ganglion.rs  mod.rs  model.rs  photoreceptor.rs
