[package]
name = "uino"
version = "0.1.0"
edition = "2021"
description = "Biologically-inspired cortical processing driven by cochlea and retinula spike streams"
license = "GPL-3.0"
keywords = ["neuroscience", "cortex", "predictive-coding", "spiking"]
categories = ["science", "simulation"]
repository = "https://github.com/knoguchi/uino"

[lib]
name = "uino"
crate-type = ["rlib"]

[dependencies]
cochlea-rs = "1.1"
retinula = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
